[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py-osrm-client"
description = "Python client for OSRM api"
readme = "README.md"
license = {text = "Apache-2.0"}
version = "1.0.0"
requires-python = ">=3.8"
authors = [
    {name = "Tommaso Rossi", email = "tommaso.rossi1@protonmail.com"}
]
keywords = ["osrm", "osrm-api", "client"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Communications",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "aiohttp >= 3.7.0",
    "requests >= 2.0.0",
]

[project.optional-dependencies]
tests = [
    "pytest > 7.4",
    "pytest-asyncio > 0.23",
    "requests-mock > 1",
]

[project.urls]
Homepage = "https://github.com/tomrss/py-osrm-client"
Issues = "https://github.com/tomrss/py-osrm-client/issues"
